feat: add nodejs and ts upgrade notes

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -48,15 +48,15 @@ There were a lot of changes from `8.x` to `14.2.2`, so please check the [RMWC ch
 
 <Alert type="danger">
 
-  Please check your project for any issues and update your code accordingly.
-  
-  You can use `yarn webiny build apps/admin --env=YOUR_ENV` to build the Admin app and check for any errors.
+Please check your project for any issues and update your code accordingly.
 
-  If you find any Webiny related issues, please report them on our [Slack channel](https://www.webiny.com/slack) or [GitHub repository](https://github.com/webiny/webiny-js/issues).
+You can use `yarn webiny build apps/admin --env=YOUR_ENV` to build the Admin app and check for any errors.
+
+If you find any Webiny related issues, please report them on our [Slack channel](https://www.webiny.com/slack) or [GitHub repository](https://github.com/webiny/webiny-js/issues).
 
 </Alert>
 
-### Pulumi v6  Upgrade ([#4096](https://github.com/webiny/webiny-js/pull/4096))
+### Pulumi v6 Upgrade ([#4096](https://github.com/webiny/webiny-js/pull/4096))
 
 As mentioned in the [Introducing Pulumi v6](#introducing-pulumi-v6-4096) section below, we've upgraded Pulumi to version 6. Although no breaking changes are expected, we've still compiled a list of all of the things you can expect upon doing your first redeployment after the upgrade [here](/docs/release-notes/5.40.0/pulumi-v6).
 
@@ -168,7 +168,7 @@ For starters, the `theme` folder has been moved from the `apps` folder to the ne
 
 <Alert type="info">
 
-  More information about the new `extensions` folder can be found in the [Introducing Extensions](/docs/release-notes/5.40.0/changelog#introducing-extensions-4111) section.
+More information about the new `extensions` folder can be found in the [Introducing Extensions](/docs/release-notes/5.40.0/changelog#introducing-extensions-4111) section.
 
 </Alert>
 
@@ -178,7 +178,7 @@ Finally, the [Reset CSS](https://meyerweb.com/eric/tools/css/reset/) styles that
 
 <Alert type={"info"}>
 
-  For existing projects, the `theme` folder will be automatically moved to the new `extensions` folder during the project upgrade process. This change will not affect any existing customizations and everything should work as expected. For more information, please refer to the separate [Theme Folder Updates](/docs/release-notes/5.40.0/theme-folder-updates) article.
+For existing projects, the `theme` folder will be automatically moved to the new `extensions` folder during the project upgrade process. This change will not affect any existing customizations and everything should work as expected. For more information, please refer to the separate [Theme Folder Updates](/docs/release-notes/5.40.0/theme-folder-updates) article.
 
 </Alert>
 
@@ -232,7 +232,7 @@ In any case, if you encounter any issues, please report them on our [Slack commu
 
 ### Introducing Empty Workspace Scaffold ([#4172](https://github.com/webiny/webiny-js/pull/4172))
 
-We've introduced the **Empty Workspace** scaffold, which can be used to create a new workspace (package) in a Webiny project. 
+We've introduced the **Empty Workspace** scaffold, which can be used to create a new workspace (package) in a Webiny project.
 
 The scaffold will automatically create the necessary files and folder structure, allowing developers to immediately start working on their code.
 
@@ -349,14 +349,14 @@ An example of how the `env` object can be used is shown below:
 import { createApiApp } from "@webiny/serverless-cms-aws";
 
 export default createApiApp({
-    pulumiResourceNamePrefix: "wby-",
-    pulumi: ({env, resources}) => {
-        // Only in production environments, increase the 
-        // memory size of the GraphQL function.
-        if (env.isProduction) {
-            resources.graphql.functions.graphql.config.memorySize(1024)
-        }
-    },
+  pulumiResourceNamePrefix: "wby-",
+  pulumi: ({ env, resources }) => {
+    // Only in production environments, increase the
+    // memory size of the GraphQL function.
+    if (env.isProduction) {
+      resources.graphql.functions.graphql.config.memorySize(1024);
+    }
+  }
 });
 ```
 
