--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -4,6 +4,7 @@ title: Webiny 5.41.0 Changelog
 description: See what's new in Webiny version 5.41.0.
 ---
 
+import { Alert } from "@/components/Alert";
 import { GithubRelease } from "@/components/GithubRelease";
 import copySecurityPermissions from "./assets/copy-security-permissions.png";
 import multiRolesTeams from "./assets/multi-roles-teams.png";
@@ -16,6 +17,33 @@ import multiRolesTeams from "./assets/multi-roles-teams.png";
 
 ✍️
 
+## Update Node.js to the Version 20
+
+We have updated the `Node.js` version, which runs the code which gets deployed, to `v20`.
+
+Users should update their development machines and CI deployments to use `Node.js` `v20`.
+
+`Node.js` `v22` is not supported as AWS Lambda runtime, so we did not go that far yet. As soon as AWS Lambda supports `Node.js` `v22`, we will update the runtime to that version, and users will get notified about it in the upgrade docs.
+
+We have also updated the `engines` field in the `package.json` file to reflect this change.
+
+```json
+  "engines": {
+    "node": "~20.0.0"
+  }
+```
+
+## Updated Typescript to the Version 4.9.5
+
+We have updated the `Typescript` version to `v4.9.5`.
+
+<Alert type="warning" title="Check and Update Your Code">
+  Users should check their code for the potential breaking changes and update their code
+  accordingly.
+</Alert>
+
+Unfortunately, updating the Typescript to the `v5+` is a bit problematic because we need to change our build process. It will probably be done for the Webiny `v5.42.0` release.
+
 ## Security
 
 ### Multiple Roles and Teams Assignments ([#4198](https://github.com/webiny/webiny-js/pull/3976))
@@ -26,7 +54,7 @@ Prior to this release, Webiny users would only be able to possess one role, and 
 
 <Alert type="info">
 
-  Note that the Teams feature is part of Webiny's enterprise offering. To learn more, please check out the [Teams](/docs/enterprise/aacl/teams) article.   
+Note that the Teams feature is part of Webiny's enterprise offering. To learn more, please check out the [Teams](/docs/enterprise/aacl/teams) article.
 
 </Alert>
 
@@ -48,22 +76,22 @@ In order to make programmatic creation of roles and defining its permissions a b
 
 <Alert title="Beta Feature">
 
-  This is a beta feature, and we're looking for feedback from the community. If you encounter any issues, please [let us know](https://www.webiny.com/slack).
- 
+This is a beta feature, and we're looking for feedback from the community. If you encounter any issues, please [let us know](https://www.webiny.com/slack).
+
 </Alert>
 
-From the early days, in order to perform both backend and frontend development, Webiny users would use the [`webiny watch`](/docs/core-development-concepts/basics/watch-command) command. And while this command works fine when it comes to frontend development (Admin, public website), we've come to a conclusion that it's not the best solution for backend development. 
+From the early days, in order to perform both backend and frontend development, Webiny users would use the [`webiny watch`](/docs/core-development-concepts/basics/watch-command) command. And while this command works fine when it comes to frontend development (Admin, public website), we've come to a conclusion that it's not the best solution for backend development.
 
 One of the reasons is the fact that, whenever a backend code change is made, the code needs to redeployed to AWS Lambda, which can take anywhere from 5 seconds, up to a minute, and even more. This can be a real productivity killer, especially when you're working on a feature that requires a lot of backend changes. Another reason is the inability to properly debug the backend code, as the `webiny watch` command doesn't provide a way to debug the code running in AWS Lambda.
 
-To address these issues, we've been experimenting with a new approach, which we like to call **Local AWS Lambda Development**, and which we're introducing in this release as a beta feature. 
+To address these issues, we've been experimenting with a new approach, which we like to call **Local AWS Lambda Development**, and which we're introducing in this release as a beta feature.
 
 Essentially, this new feature allows you to run your AWS Lambda code locally, without the need to continuously deploy changes to AWS. This means that, whenever you make a change to your backend code, you can immediately see the results, without the need to wait for the code to be deployed to AWS Lambda. And not only that, you can also debug your code, as the code is running in your local environment.
 
 To give this new feature a try, you can add the following feature flag in your `webiny.project.ts` file:
 
 ```diff-ts webiny.project.ts
-// ... 
+// ...
 
 export default {
     template: "@webiny/cwp-template-aws@5.41.00",
@@ -100,7 +128,7 @@ We hope you'll find this new feature useful, and we're looking forward to hearin
 
 <Alert type="info" title="Nice to know">
 
-  The initial inspiration for building this feature came from [Serverless Stack](https://github.com/sst/sst) and its [Live Lambda Development](https://docs.sst.dev/live-lambda-development) feature. Webiny's version of this feature is almost identical to the one provided by Serverless Stack, with a few minor differences.
+The initial inspiration for building this feature came from [Serverless Stack](https://github.com/sst/sst) and its [Live Lambda Development](https://docs.sst.dev/live-lambda-development) feature. Webiny's version of this feature is almost identical to the one provided by Serverless Stack, with a few minor differences.
 
 </Alert>
 
@@ -112,12 +140,12 @@ Because of an internal code issue, in Webiny projects that were using multiple t
 
 <Alert type="info">
 
-  Note that the Audit Logs feature is part of Webiny's enterprise offering. To learn more, please check out the [Teams](/docs/enterprise/aacl/teams) article.   
+Note that the Audit Logs feature is part of Webiny's enterprise offering. To learn more, please check out the [Teams](/docs/enterprise/aacl/teams) article.
 
 </Alert>
 
 <Alert type="info">
 
-  In case you missed it, via the [Theme Manager](/docs/enterprise/theme-manager) application, users can create multiple themes that are used to style websites created with the Page Builder application.  
+In case you missed it, via the [Theme Manager](/docs/enterprise/theme-manager) application, users can create multiple themes that are used to style websites created with the Page Builder application.
 
 </Alert>
