docs: add hcms background tasks

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -10,6 +10,7 @@ import {Alert} from "@/components/Alert";
 import {GithubRelease} from "@/components/GithubRelease";
 import copySecurityPermissions from "./assets/copy-security-permissions.png";
 import multiRolesTeams from "./assets/multi-roles-teams.png";
+import hcmsBulkActionBackgroundTasks from "./assets/hcms-bulk-action-via-background-tasks.gif";
 
 <GithubRelease version={"5.41.0"} />
 
@@ -45,6 +46,29 @@ We have updated the `Typescript` version to `v4.9.5`.
 </Alert>
 
 Unfortunately, updating the Typescript to the `v5+` is a bit problematic because we need to change our build process. It will probably be done for the Webiny `v5.42.0` release.
+
+## Headless CMS
+
+### Enhance Bulk Actions with Background Tasks ([#4112](https://github.com/webiny/webiny-js/pull/4112))
+
+We are excited to introduce a new enhancement in the Headless CMS: bulk actions handled through background tasks. This update streamlines large-scale content management processes, improving efficiency and providing a smoother user experience.
+
+<Image src={hcmsBulkActionBackgroundTasks} alt="Managing Entries With Bulk Actions Powered By Background Tasks" />
+
+With this release, users can now perform the following bulk actions in the background, without needing to process them in-series on the client side:
+
+- Publish entries
+- Unpublish entries
+- Move entries to a folder
+- Move entries to the trash bin
+- Restore entries from the trash bin
+- Permanently delete entries
+
+When a user selects all entries in the list, a new banner will appear, asking for confirmation to include all entries, including those that haven’t been loaded yet. The banner will also appear if the current folder contains child folders.
+
+Upon confirmation, the bulk action is processed by a background task, bypassing the need for the client to handle it in-series.
+
+At this stage, real-time status updates on background tasks are not supported. Users will need to manually refresh the page to see the current status of their tasks.
 
 ## Security
 
