docs(HCMS): change background task name

--- a/docs/developer-docs/5.38.x/headless-cms/extending/customize-entry-list-bulk-actions.mdx
+++ b/docs/developer-docs/5.38.x/headless-cms/extending/customize-entry-list-bulk-actions.mdx
@@ -215,7 +215,7 @@ import "./App.scss";
 +     <IconButton
 +       icon={<SyncIcon />}
 +       onAction={openSyncDialog}
-+       label={`Sync`}
++       label={"Sync"}
 +       tooltipPlacement={"bottom"}
 +     />
 +   );
