docs(HCMS): change background task name

--- a/docs/developer-docs/5.38.x/headless-cms/extending/customize-entry-list-bulk-actions.mdx
+++ b/docs/developer-docs/5.38.x/headless-cms/extending/customize-entry-list-bulk-actions.mdx
@@ -139,12 +139,12 @@ This is the whole process of registering a new bulk action element.
 
 ### Asynchronous Bulk Action
 
-Sometimes, you may need to execute a bulk action that involves multiple asynchronous tasks, such as sending selected entries to an external service. In such cases, we can use the `useWorker` and `useDialogs` hooks to create a seamless user experience:
+Occasionally, you might need to perform a bulk action that involves various asynchronous tasks, like syncing chosen entries with an external service. In these situations, we can leverage the `useWorker` and `useDialogs` hooks to ensure a smooth user experience:
 
 - `useWorker` provides the currently selected items and the `processInSeries` method to perform our callback.
-- `useDialog` provides methods to show confirmation and result dialogs.
+- `useDialog` provides methods to display confirmation and result dialogs.
 
-Here's an example of creating a bulk action that sends the selected entries to an external service using `fetch` and shows the result of each iteration.
+Here’s an example of creating a bulk action that syncs the selected entries with an external service using `fetch`, and shows the result of each iteration.
 
 ```diff-tsx apps/admin/src/App.tsx
 import React from "react";
