--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -20,7 +20,7 @@ import hcmsBulkActionBackgroundTasks from "./assets/hcms-bulk-action-via-backgro
 
 ✍️
 
-## Update Node.js to the Version 20
+### Update Node.js to the Version 20
 
 We have updated the `Node.js` version, which runs the code which gets deployed, to `v20`.
 
@@ -36,7 +36,7 @@ We have also updated the `engines` field in the `package.json` file to reflect t
   }
 ```
 
-## Updated Typescript to the Version 4.9.5
+### Updated Typescript to the Version 4.9.5
 
 We have updated the `Typescript` version to `v4.9.5`.
 
@@ -69,6 +69,11 @@ When a user selects all entries in the list, a new banner will appear, asking fo
 Upon confirmation, the bulk action is processed by a background task, bypassing the need for the client to handle it in-series.
 
 At this stage, real-time status updates on background tasks are not supported. Users will need to manually refresh the page to see the current status of their tasks.
+
+## Page Builder
+
+### Prerendering Issue
+
 
 ## Security
 
@@ -176,17 +181,14 @@ In case you missed it, via the [Theme Manager](/docs/enterprise/theme-manager) a
 
 </Alert>
 
-## Background Tasks
+## Deployments
 
-### A Background Task Step Function Is Now Triggered Via Direct AWS SDK call ([#4289](https://github.com/webiny/webiny-js/pull/4289))
+### Updated CloudFormation Template
 
-Prior to this version, a background task Step Function was triggered via an Event Bridge event. This caused problems when a background task had child tasks - sometimes child task failed but the parent did not know about it.
+### Updated Pulumi Versions
 
-Now we have a reference to the child task and the parent can check if the child task is actually running.
 
-It also allowed us to trigger a Step Function with a name - for easier debugging and referencing.
-
-## Elasticsearch and OpenSearch Shared Indexes ([#4306](https://github.com/webiny/webiny-js/pull/4306))
+### Elasticsearch and OpenSearch Shared Indexes ([#4306](https://github.com/webiny/webiny-js/pull/4306))
 
 In this release we have added the ability to make the Webiny share indexes via Pulumi configuration.
 
@@ -246,3 +248,15 @@ export default createApiApp({
   You should `NOT` change the `sharedIndexes` configuration after the initial deployment. If you do, you will lose all the data.
 
 </Alert>
+
+## Other Improvements
+
+### Introduced `robots.txt` File For Admin/Website Apps
+
+### A Background Task Step Function Is Now Triggered Via Direct AWS SDK call ([#4289](https://github.com/webiny/webiny-js/pull/4289))
+
+Prior to this version, a background task Step Function was triggered via an Event Bridge event. This caused problems when a background task had child tasks - sometimes child task failed but the parent did not know about it.
+
+Now we have a reference to the child task and the parent can check if the child task is actually running.
+
+It also allowed us to trigger a Step Function with a name - for easier debugging and referencing.
