feat: create 5.41.0 docs

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -251,7 +251,17 @@ export default createApiApp({
 
 ## Other Improvements
 
-### Introduced `robots.txt` File For Admin/Website Apps
+### Introduced `robots.txt` For Admin and Website Apps ([#4329](https://github.com/webiny/webiny-js/pull/4329))
+
+For both Admin and Website apps, we've introduced the `robots.txt` file, which is now available in the following locations:
+
+1. `apps/admin/public/robots.txt`
+2. `apps/website/public/robots.txt`
+
+The `robots.txt` file is used to provide instructions to web robots (also known as web crawlers) about the pages that should be crawled or not crawled. By default, the `robots.txt` file is set to allow all web crawlers to crawl all pages for the Website app, and disallow all web crawlers from crawling all pages for the Admin app. In case of the Admin app, this is done to prevent search engines from indexing the Admin app pages.
+
+For projects that are being upgraded from a previous version of Webiny, the `robots.txt` file will be automatically created during the upgrade process.
+
 
 ### A Background Task Step Function Is Now Triggered Via Direct AWS SDK call ([#4289](https://github.com/webiny/webiny-js/pull/4289))
 
