feat: create 5.41.0 docs

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -183,10 +183,27 @@ In case you missed it, via the [Theme Manager](/docs/enterprise/theme-manager) a
 
 ## Deployments
 
-### Updated CloudFormation Template
+### Missing Permission In "Deploy Webiny Project" CloudFormation Template ([#4323](https://github.com/webiny/webiny-js/pull/4323))
 
-### Updated Pulumi Versions
+In order to deploy a Webiny project in a more controlled and secure manner, users can utilize the **Deploy Webiny Project** AWS CloudFormation template. Via three IAM user groups, the template deploys necessary ([least-privilege](https://en.wikipedia.org/wiki/Principle_of_least_privilege)) set of permissions into a specified AWS account, which also automatically get linked with a designated Amazon IAM user.
 
+With this release, we've addressed a couple of issues related to missing or incorrectly set permissions in the **Deploy Webiny Project** AWS CloudFormation template. 
+
+
+<Alert type={"info"}>
+
+  Learn more about the **Deploy Webiny Project** AWS CloudFormation template in our [Configure AWS Credentials](/docs/infrastructure/aws/configure-aws-credentials#deploy-webiny-project-aws-cloud-formation-template) article.
+
+</Alert>
+
+### Updated Pulumi Package Versions ([#4323](https://github.com/webiny/webiny-js/pull/4323/commits/7ce12e66ec7ddd7580ed702617c31a5c49ac0175))
+
+We've updated the minimum required versions of Pulumi packages. The updated versions are as follows:
+
+1. [`@pulumi/aws`](https://www.npmjs.com/package/@pulumi/aws): bumped from `^6.48.0"` to `^6.55.0`
+2. [`@pulumi/pulumi`](https://www.npmjs.com/package/@pulumi/pulumi): bumped from `^3.128.0"` to `^3.136.1`
+
+As we can see, we've only bumped the patch versions of these packages, which means that there shouldn't be any breaking changes. However, as a best practice, we recommend that you test your deployments in a non-production environment before deploying to production.
 
 ### Elasticsearch and OpenSearch Shared Indexes ([#4306](https://github.com/webiny/webiny-js/pull/4306))
 
