feat: create 5.41.0 docs

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -20,7 +20,7 @@ import hcmsBulkActionBackgroundTasks from "./assets/hcms-bulk-action-via-backgro
 
 ✍️
 
-### Update Node.js to the Version 20
+### Updated Node.js to the Version 20
 
 We have updated the `Node.js` version, which runs the code which gets deployed, to `v20`.
 
@@ -204,6 +204,12 @@ We've updated the minimum required versions of Pulumi packages. The updated vers
 2. [`@pulumi/pulumi`](https://www.npmjs.com/package/@pulumi/pulumi): bumped from `^3.128.0"` to `^3.136.1`
 
 As we can see, we've only bumped the patch versions of these packages, which means that there shouldn't be any breaking changes. However, as a best practice, we recommend that you test your deployments in a non-production environment before deploying to production.
+
+<Alert type="info">
+
+  Webiny projects are deployed with Pulumi - a modern infrastructure as code (IaC) solution. Check out the [Iac with Pulumi](/docs/infrastructure/pulumi-iac/iac-with-pulumi) topic to learn more.
+
+</Alert>
 
 ### Elasticsearch and OpenSearch Shared Indexes ([#4306](https://github.com/webiny/webiny-js/pull/4306))
 
