feat: create 5.41.0 docs

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -72,8 +72,25 @@ At this stage, real-time status updates on background tasks are not supported. U
 
 ## Page Builder
 
-### Prerendering Issue
+### Prerendering Service - AWS Lambda Timeouts ([#4330](https://github.com/webiny/webiny-js/pull/4330))
 
+While prerendering a page that was just published, the Prerendering Service, or, more specifically, the AWS Lambda function that's responsible for prerendering the page, would sometimes run into an AWS Lambda timeout, causing the prerendering process to fail.
+
+<Alert>
+
+  One of the examples where this issue would occur is when a page contained one or more YouTube embeds.
+
+</Alert>
+
+With this release, we've done a thorough investigation and identified the root cause of the issue. And although [the fix might not be ideal](https://github.com/webiny/webiny-js/pull/4330/files) at the code level, it *did* show a significant improvement in the prerendering process, as the AWS Lambda timeouts were no longer an issue. 
+
+We'll be monitoring the situation closely, and if we see that the issue persists, we'll be revisiting the code to come up with a more robust solution.
+
+<Alert>
+
+  To learn more about the prerendering process Webiny's Page Builder app users to prerender published pages, check out the [Prerendering Pages](https://www.webiny.com/docs/architecture/website/prerendering-pages) article.
+
+</Alert>
 
 ## Security
 
