fix: code changes for es deployments

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -30,22 +30,36 @@ Users should update their development machines and CI deployments to use `Node.j
 
 We have also updated the `engines` field in the `package.json` file to reflect this change.
 
-```json
-  "engines": {
-    "node": "~20.0.0"
-  }
+```diff-json
++  "engines": {
++    "node": "~20.0.0"
++  }
 ```
 
 ### Updated Typescript to the Version 4.9.5
 
 We have updated the `Typescript` version to `v4.9.5`.
 
+We also removed the `typescript` package from the `package.json` `resolutions`, so we are not forcing all the packages to use the same version.
+
+```diff-json
+  "resolutions": {
+    ....
+-    "typescript": "4.7.4",
+    ....
+  }
+```
+
+If you notice any issues with your project because of that, feel free to add version `4.9.5` into the `resolutions` field in your `package.json` file.
+
+```diff-json
+
 <Alert type="warning" title="Check and Update Your Code">
   Users should check their code for the potential breaking changes and update their code
   accordingly.
 </Alert>
 
-Unfortunately, updating the Typescript to the `v5+` is a bit problematic because we need to change our build process. It will probably be done for the Webiny `v5.42.0` release.
+Unfortunately, updating the Typescript to the `v5+` is a bit problematic because we need to change our build process. It will probably be done for Webiny `v5.42.0` release.
 
 ## Headless CMS
 
@@ -230,55 +244,55 @@ As we can see, we've only bumped the patch versions of these packages, which mea
 
 ### Elasticsearch and OpenSearch Shared Indexes ([#4306](https://github.com/webiny/webiny-js/pull/4306))
 
-In this release we have added the ability to make the Webiny share indexes via Pulumi configuration.
+In this release we have added the ability to make Webiny share indexes via Pulumi configuration.
 
-To find out more about shared indexes, please read this article.
+To find out more about shared indexes, please read [this](/docs/core-development-concepts/extending-and-customizing/how-to-customize-elasticsearch-index) article.
 
 
-To make the `OpenSearch` share indexes, you need to add the following configuration to your `webiny.project.ts` file:
-```typescript
+To make Elasticsearch share indexes, you need to add the following configuration to your `apps/core/webiny.aplication.ts` file:
+```diff-ts
 import { createCoreApp } from "@webiny/serverless-cms-aws";
 
 export default createCoreApp({
     pulumiResourceNamePrefix: "wby-",
     openSearch: {
-        sharedIndexes: true
++        sharedIndexes: true
     }
 });
 ```
 
-
-```typescript
+And to the `apps/api/webiny.application.ts` file:
+```diff-ts
 import { createApiApp } from "@webiny/serverless-cms-aws";
 
 export default createApiApp({
     pulumiResourceNamePrefix: "wby-",
     openSearch: {
-        sharedIndexes: true
++        sharedIndexes: true
     }
 });
 ```
 
-To make the `Elasticesearch` share indexes, you need to add the following configuration to your `webiny.project.ts` file:
-```typescript
+To make Elasticsearch share indexes, you need to add the following configuration to your `apps/core/webiny.aplication.ts` file:
+```diff-ts
 import { createCoreApp } from "@webiny/serverless-cms-aws";
 
 export default createCoreApp({
     pulumiResourceNamePrefix: "wby-",
     elasticSearch: {
-        sharedIndexes: true
++        sharedIndexes: true
     }
 });
 ```
 
-
-```typescript
+And to the `apps/api/webiny.application.ts` file:
+```diff-ts
 import { createApiApp } from "@webiny/serverless-cms-aws";
 
 export default createApiApp({
     pulumiResourceNamePrefix: "wby-",
     elasticSearch: {
-        sharedIndexes: true
++        sharedIndexes: true
     }
 });
 ```
